--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,4 +16,31 @@
         <item name="android:layout_centerVertical">true</item>
     </style>
 
+    <!-- Row -->
+    <style name="RowTitle">
+        <item name="android:textColor">@color/colorDarkestText</item>
+        <item name="android:textSize">@dimen/row_title_size</item>
+        <item name="android:layout_margin">@dimen/item_margin</item>
+    </style>
+
+    <style name="RowSection">
+        <item name="android:textColor">@color/colorDarkText</item>
+        <item name="android:textSize">@dimen/row_section_size</item>
+        <item name="android:layout_margin">@dimen/item_margin</item>
+    </style>
+
+    <style name="RowDateOfPublication">
+        <item name="android:textColor">@color/colorFadedText</item>
+        <item name="android:textSize">@dimen/row_date_size</item>
+        <item name="android:layout_margin">@dimen/item_margin</item>
+    </style>
+
+    <style name="RowType">
+        <item name="android:textColor">@color/colorDarkText</item>
+        <item name="android:textSize">@dimen/row_type_size</item>
+        <item name="android:layout_margin">@dimen/item_margin</item>
+    </style>
+
+
+
 </resources>
