added layout change on orientation change.

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -41,6 +41,12 @@
         <item name="android:layout_margin">@dimen/item_margin</item>
     </style>
 
+    <style name="RowLabel">
+        <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:textSize">@dimen/row_title_size</item>
+        <item name="android:layout_margin">@dimen/item_margin</item>
+    </style>
+
 
 
 </resources>
