--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent">
 
     <include layout="@layout/layout_header"/>
+    <include layout="@layout/layout_searchbar"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_main"
